--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -12,10 +12,9 @@
         android:layout_height="45dp"
         android:backgroundTint="#15803D">
         <TextView
-            android:id="@+id/text_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add item"
+            android:text="Add Dish"
             android:textSize="25dp"
             android:textColor="@color/white"
             android:padding="5dp"
@@ -26,12 +25,12 @@
     </androidx.cardview.widget.CardView>
 
     <EditText
-        android:id="@+id/diskname"
+        android:id="@+id/dish_add"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="80dp"
-        android:hint="Disk name"
+        android:hint="Dish name"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:background="@drawable/stroke"
@@ -39,7 +38,7 @@
         android:textSize="20dp" />
 
     <EditText
-        android:id="@+id/description"
+        android:id="@+id/description_add"
         android:layout_width="match_parent"
         android:layout_height="85dp"
         android:layout_marginHorizontal="20dp"
@@ -52,7 +51,7 @@
         android:textSize="20dp" />
 
     <EditText
-        android:id="@+id/itemname"
+        android:id="@+id/item_add"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginHorizontal="20dp"
@@ -70,7 +69,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/time"
+            android:id="@+id/time_add"
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_marginHorizontal="20dp"
@@ -84,7 +83,7 @@
             android:textSize="20dp" />
 
         <EditText
-            android:id="@+id/catagory"
+            android:id="@+id/catagory_add"
             android:layout_width="wrap_content"
             android:layout_height="65dp"
             android:layout_marginHorizontal="20dp"
@@ -101,6 +100,7 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/image_add"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="430dp"
@@ -119,6 +119,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
+        android:id="@+id/submit_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="650dp"
