--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,76 +7,72 @@
     tools:context=".ui.notifications.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-  <androidx.cardview.widget.CardView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="20dp"
-      app:cardElevation="10dp"
-      app:cardBackgroundColor="#EDE9E9">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:backgroundTint="#15803D">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" HOME"
+            android:textSize="25dp"
+            android:textColor="@color/white"
+            android:padding="5dp"
+            android:gravity="center"
+            >
 
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:drawableLeft="@drawable/baseline_person_24"
-          android:padding="10dp"
-          android:text="  user name "
-          android:textSize="20dp"/>
+        </TextView>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/image_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginHorizontal="20dp"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="15dp"
+        app:cardMaxElevation="20dp"
+        app:cardBackgroundColor="#EDE9E9">
 
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="disk name.."
-          android:layout_marginTop="50dp"
-          android:layout_marginLeft="10dp"
-          android:textSize="20dp"/>
-
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="discription"
-          android:layout_marginTop="80dp"
-          android:layout_marginLeft="10dp"
-          android:textSize="18dp"/>
-
-      <androidx.cardview.widget.CardView
-          android:layout_width="match_parent"
-          android:layout_height="150dp"
-          android:layout_marginTop="120dp"
-          android:layout_marginLeft="10dp"
-          android:layout_marginHorizontal="10dp"
-          app:cardCornerRadius="10dp"
-          />
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="horizontal">
-
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="catagogy type"
-              android:layout_marginTop="280dp"
-              android:layout_marginLeft="10dp"
-              android:layout_weight="1"
-              android:textSize="20dp"/>
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="time taken"
-              android:layout_marginTop="280dp"
-              android:layout_weight="1"
-              android:textSize="20dp"
-              />
-
-      </LinearLayout>
+        <TextView
+            android:id="@+id/user_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/baseline_person_24"
+            android:padding="10dp"
+            android:text="  user name "
+            android:textSize="20dp"/>
 
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/dish_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="dish name.."
+                android:layout_marginTop="200dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:textSize="20dp"/>
 
-  </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/fav_home"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableRight="@drawable/favorite"
+                android:layout_marginTop="190dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_weight="2"
+                android:textSize="20dp"
+                />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
